# netflow2traces

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  test_netflow_sender.py  todo.txt
demo/: README.md  docker-compose.yml  prometheus.yaml  tempo.yaml
demo/grafana/provisioning/dashboards/: demo.yaml
demo/grafana/provisioning/dashboards/demo/: netflow-dashboard.json
demo/grafana/provisioning/datasources/: datasources.yaml
demo/loki/: loki-config.yaml
demo/tempo/: tempo.yaml
demo/tempo-data/blocks/: tempo_cluster_seed.json
demo/tempo-data/blocks/single-tenant/: index.pb.zst
demo/tempo-data/blocks/single-tenant/182ed39b-6ffc-49cd-934e-dd3305c4b6eb/: bloom-0  data.parquet  meta.compacted.json
demo/tempo-data/blocks/single-tenant/188bd2a7-d24a-4fdf-a2c8-a278e1bfd818/: bloom-0  data.parquet  meta.compacted.json
demo/tempo-data/blocks/single-tenant/1a32fca2-0444-4f2b-9b6f-1fe91fe96b4f/: bloom-0  data.parquet  meta.json
demo/tempo-data/blocks/single-tenant/26f44da4-5dfb-4692-970f-eef0c8194ac7/: index
demo/tempo-data/blocks/single-tenant/29b1ea22-8ff7-4d43-a303-99679294359f/: data.parquet  index  meta.compacted.json
demo/tempo-data/wal/e5542d19-5b89-4070-8d0b-056ba73b5563+single-tenant+vParquet4/: 0000000001  0000000002  0000000003  0000000004  0000000005  0000000006  0000000007  0000000008  0000000009  0000000010  0000000011  0000000012  0000000013  meta.json
src/netflow2traces/: __init__.py  __main__.py  collector.py  config.py  metrics.py  tracer.py  utils.py
tools/: README.md  netflow_generator.py
(+197 files in other folders)
